--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,6 +7,7 @@
         <li class="nav-item"><a class="nav-link" id="changelog" routerLink="/changelog">Changelog</a></li>
         <li class="nav-item"><a class="nav-link" id="faq" routerLink="/faq">FAQ</a></li>
         <li class="nav-item"><a class="nav-link" id="contact" routerLink="/contact">Kontakt</a></li>
+        <li class="nav-item"><a class="nav-link" id="productinfo" routerLink="/contact">Info</a></li>
       </ul>
     </div>
   </div>
