--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -15,12 +15,12 @@
             <p>Dieses Paket eignet sich perfekt für Tester.</p>
             <div class="features">
               <h4><span class="feature">Kundensupport:&nbsp;</span><span>Teilweise</span></h4>
-              <h4><span class="feature">Duration:&nbsp;</span><span>1 Jahr</span></h4>
+              <h4><span class="feature">Dauer:&nbsp;</span><span>1 Jahr</span></h4>
               <h4><span class="feature">Nutzer:&nbsp;</span><span>1000</span></h4>
             </div>
             <div class="price">
               <h4>N/A</h4>
-            </div><button class="btn btn-outline-primary btn-block" type="button">BESTELLEN</button>
+            </div><button class="btn btn-outline-primary btn-block" type="button" (click)="notAvailbleYet()">BESTELLEN</button>
           </div>
         </div>
         <div class="col-md-5 col-lg-4">
@@ -37,7 +37,7 @@
             </div>
             <div class="price">
               <h4>N/A</h4>
-            </div><button class="btn btn-primary btn-block" type="button">BESTELLEN</button>
+            </div><button class="btn btn-outline-primary btn-block" type="button" (click)="notAvailbleYet()">BESTELLEN</button>
           </div>
         </div>
         <div class="col-md-5 col-lg-4">
@@ -48,12 +48,12 @@
             <p>Dieses Paket wendet sich an Großkunden.&nbsp;</p>
             <div class="features">
               <h4><span class="feature">Kundensupport:&nbsp;</span><span>Ja</span></h4>
-              <h4><span class="feature">Duration:&nbsp;</span><span>10 Jahre</span></h4>
+              <h4><span class="feature">Dauer:&nbsp;</span><span>10 Jahre</span></h4>
               <h4><span class="feature">Nutzer:&nbsp;</span><span>Unbegrenzt</span></h4>
             </div>
             <div class="price">
               <h4>N/A</h4>
-            </div><button class="btn btn-outline-primary btn-block" type="button">BESTELLEN</button>
+            </div><button class="btn btn-outline-primary btn-block" type="button" (click)="notAvailbleYet()">BESTELLEN</button>
           </div>
         </div>
       </div>
