--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,3 +1,28 @@
+<div class="modal fade" id="FAQModal" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Frage für das FAQ stellen</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <label>
+          Frage:
+          <textarea class="form-control" id="FAQ-textarea"></textarea>
+        </label>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">abbrechen</button>
+        <button type="button" class="btn btn-primary" (click)="askQuestion()">Frage zum FAQ hinzufügen</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
 <app-navbar active="faq"></app-navbar>
 <main class="page">
   <section class="clean-block">
@@ -5,6 +30,16 @@
       <div class="block-heading">
         <h2 class="text-info">FAQ</h2>
         <p>Hier finden sie häufig gestellte Fragen und unsere Antworten dazu.</p>
+        <button class="btn btn-primary" data-target="#FAQModal" data-toggle="modal">Frage stellen</button>
+      </div>
+      <div class="card" *ngFor="let faq of faqs" style="margin-top: 2em;">
+          <div class="card-body">
+            <h5 style="font-weight: bold">Frage:</h5>
+            <p>{{faq.question}}</p>
+            <hr>
+            <h5 style="font-weight: bold">Antwort:</h5>
+            <p>{{parseAnswer(faq)}}</p>
+          </div>
       </div>
     </div>
   </section>
