committing first runnable version of this page

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,9 +4,9 @@
       <div class="col-sm-3">
         <h5>Rechtliches</h5>
         <ul>
-          <li><a href="#">Impressum</a></li>
+          <li><a routerLink="/impressum">Impressum</a></li>
           <li><a href="#">AGBs</a></li>
-          <li><a href="#">Datenschutzerklärung</a></li>
+          <li><a routerLink="/datenschutz">Datenschutzerklärung</a></li>
         </ul>
       </div>
     </div>
