committing first runnable version of this page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -48,7 +48,7 @@
 
 <app-navbar active="home"></app-navbar>
 <main class="page landing-page">
-  <section class="clean-block clean-hero" style="background-image:url(&quot;/assets/img/tech/image4.jpg?h=0adc0de9a17a7caea6b8641f5d6ae02c&quot;);color:rgba(9, 162, 255, 0.85);">
+  <section class="clean-block clean-hero" style="background-image:url(&quot;/assets/edan-cohen-gjmbiBK9kI4-unsplash.jpg?h=0adc0de9a17a7caea6b8641f5d6ae02c&quot;);color:rgba(9, 162, 255, 0.85);">
     <div class="text">
       <h2>WR-Issue&nbsp;</h2>
       <p>WR-Issue ist ein, von Webservice Rathje entwickeltes System, mit dem man Schäden in einem speziellen Bereich dem Zuständigen melden kann.&nbsp;&nbsp;</p>
@@ -62,7 +62,7 @@
         <p>Warum ist unser System so gut?</p>
       </div>
       <div class="row align-items-center">
-        <div class="col-md-6"><img class="img-thumbnail" src="/assets/img/scenery/1_C3kxjCrJy-aWSMpe2chfaA.png?h=854e94bbbe28626dcbbab66073e6ef35"></div>
+        <div class="col-md-6"><img class="img-thumbnail" src="/assets/1_hIzmaZ2vRWYsJwor-YxKmw.png?h=854e94bbbe28626dcbbab66073e6ef35"></div>
         <div class="col-md-6">
           <h3>Kompatibilität</h3>
           <div class="getting-started-info">
