--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -106,7 +106,7 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-sm-6 col-lg-4">
-          <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/avatars/avatar1.jpg?h=2bf47f2c2deaed837d2490a2db0a7175">
+          <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/avatars/nick.rathje.png?h=2bf47f2c2deaed837d2490a2db0a7175">
             <div class="card-body info">
               <h4 class="card-title">Nick Rathje</h4>
               <p class="card-text">CEO</p>
